--- a/about.html
+++ b/about.html
@@ -57,9 +57,9 @@ a:link {
 			<div class="ui-block-a">
 				<p>
 					<center>
-						Nama : Moh. Fadli <br>
-						NIM : 5520114070 <br>
-						Kelas : T2.III
+						Nama  : Mohamad Fadli <br>
+						NIM   : 5520114070 <br>
+						Kelas : TI.2-3
 					</center>
 				</p>
 			</div>
