--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <div id="dialog" data-rel="dialog">
 	<div data-role="header" data-theme="a" data-position="fixed">
 		<a href="" data-rel="back" class="ui-btn ui-btn-left ui-alt-icon ui-nodisc-icon ui-corner-all ui-btn-icon-notext ui-icon-delete"></a>
-        <h1>About me</h1>
+        <h1>Peringatan</h1>
     </div>
 	<div data-role="content">
 		<div data-role="content" data-theme="c">
