--- a/about.html
+++ b/about.html
@@ -4,44 +4,7 @@
 <title></title> 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
-<style type="text/css">
-
-body { font-family: Helvetica, san-serif; }
-H1 { 
-	color: black; 
-}
-a:link { 
-	color:purple; 
-}
-
-.main,
-.sidebar { 
-	display:block; 
-	width:100%;
-}
-
-@media all and (min-width: 36em){
-	.main { 
-		float: left;
-		width:60%; 
-	}
-	.sidebar { 
-		float: left; 
-		width:40%;
-	}
-}
-
-@media all and (min-width: 50em){
-	.main { 
-		width:70%;
-	}
-	.sidebar { 
-		width:30%; 
-	}
-
-	H1 { color: black; font-size:1.2em }
-}
-</style>
+<link rel="stylesheet" href="css/style.css" />
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script src="js/jquery.mobile-1.4.5.min.js"></script>  
 </head> 
@@ -56,11 +19,13 @@ a:link {
 		<div class="ui-grid-solo">
 			<div class="ui-block-a">
 				<p>
+					<b>
 					<center>
 						Nama  : Mohamad Fadli <br>
-						NIM   : 5520114070 <br>
-						Kelas : TI.2-3
+						NIM : 5520114070 <br>
+						Kelas : TI.2.III
 					</center>
+					</b>
 				</p>
 			</div>
 		</div>
