--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
 <link rel="stylesheet" href="css/jw-jqm-cal.css" />
+<link rel="stylesheet" href="css/style.css" />
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script src="js/jquery.mobile-1.4.5.min.js"></script>  
@@ -12,17 +13,17 @@
 <script src="js/script.js"></script>  
 </head> 
 <body>
-<div data-role="page" id="index" data-quicklinks="true">
-    <div data-role="header" data-position="fixed">
-    	 <h1>AGP Cal</h1>
-		<a href="about.html" class="ui-btn ui-btn-right ui-alt-icon ui-nodisc-icon ui-corner-all ui-btn-icon-left ui-icon-user">About</a>
-    </div>
-	<div class="ui-grid-solo">
-		<div class="ui-block-a">
-			<center>
-				<div data-role="controlgroup" data-type="horizontal">
-					<select name="" id="">
-						<option value="">Tanggal</option>
+    <div data-role="page" data-theme="a" id="index" data-quicklinks="true">
+        <div data-role="header" data-position="fixed">
+        	 <h1>Calender Akademik</h1>
+    		<a href="about.html" class="ui-btn ui-btn-right ui-alt-icon ui-nodisc-icon ui-corner-all ui-btn-icon-left ui-icon-user">About</a>
+        </div>
+        <div class="ui-grid-solo">
+		<div data-role="" data-type="">
+			<div class="ui-grid-c">
+				<div class="ui-block-a">
+					<select name="" id="tanggal">
+						<option value="">D</option>
 						<option value="1">1</option>
 						<option value="2">2</option>
 						<option value="3">3</option>
@@ -55,8 +56,10 @@
 						<option value="30">30</option>
 						<option value="31">31</option>
 					</select>
-					<select name="" id="">
-						<option value="">Bulan</option>
+				</div>
+				<div class="ui-block-b">
+					<select name="" id="bulan">
+						<option value="">M</option>
 						<option value="1">Januari</option>
 						<option value="2">Februari</option>
 						<option value="3">Maret</option>
@@ -70,43 +73,31 @@
 						<option value="11">November</option>
 						<option value="12">Desember</option>
 					</select>
-					<select name="" id="">
-						<option value="">Tahun</option>
-						<option value="2000">2000</option>
-						<option value="2001">2001</option>
-						<option value="2002">2002</option>
-						<option value="2003">2003</option>
-						<option value="2004">2004</option>
-						<option value="2005">2005</option>
-						<option value="2006">2006</option>
-						<option value="2007">2007</option>
-						<option value="2008">2008</option>
-						<option value="2009">2009</option>
-						<option value="2010">2010</option>
-						<option value="2011">2011</option>
-						<option value="2012">2012</option>
-						<option value="2013">2013</option>
+				</div>
+				<div class="ui-block-c">
+					<select name="" id="tahun">
+						<option value="">Y</option>
 						<option value="2014">2014</option>
 						<option value="2015">2015</option>
-						<option value="2016">2016</option>
-						<option value="2017">2017</option>
-						<option value="2018">2018</option>
-						<option value="2019">2019</option>
-						<option value="2020">2020</option>
 					</select>
-				</div>			
-			</center>
+				</div>
+				<div class="ui-block-d">
+					<div class="ui-input-btn ui-btn ui-mini ui-icon-arrow-r ui-btn-icon-right" id="goSearch">Go</div>
+				</div>
+			</div>
 		</div>
-	</div>
-    <div role="main" class="ui-content jqm-content jqm-fullwidth">
-    	<div id="calendar"></div>
+		</div>
+        <div role="main" class="ui-content jqm-content jqm-fullwidth">
+        	<div id="calendar"></div>
+        </div>
+        <div data-role="" data-type="">
+			<div class="ui-grid-b">
+			</div>
+		</div>
+        <div data-role="footer" data-position="fixed">
+        	<h1>Copyright &copy; By: Fadli</h1>
+        </div>
     </div>
-
-    <div data-role="footer" data-position="fixed">
-    	<h1>Copyright &copy; By: Fadli</h1>
-    </div>
-
-</div>
 </body>
 <div id="dialog" data-rel="dialog">
 	<div data-role="header" data-theme="a" data-position="fixed">
