--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div data-role="page" data-theme="a" id="index" data-quicklinks="true">
         <div data-role="header" data-position="fixed">
-        	 <h1>Calender Akademik</h1>
+        	<h1>Kalender</h1>
     		<a href="about.html" class="ui-btn ui-btn-right ui-alt-icon ui-nodisc-icon ui-corner-all ui-btn-icon-left ui-icon-user">About</a>
         </div>
         <div class="ui-grid-solo">
@@ -95,7 +95,7 @@
 			</div>
 		</div>
         <div data-role="footer" data-position="fixed">
-        	<h1>Copyright &copy; By: Fadli</h1>
+        	<h1>Copyright &copy; By:Mohamad Fadli</h1>
         </div>
     </div>
 </body>
